# curry-howard-linebot

./: Procfile  README.md  curry-howard-linebot.cabal  stack.yaml
app/: CurryHowardCorrespondence.hs  Main.hs
