name:                curry-howard-linebot
version:             0.1.0.0
homepage:            https://github.com/matsubara0507/curry-howard-linebot#readme
license:             MIT
license-file:        LICENSE
author:              MATSUBARA Nobutada
copyright:           2017 MATSUBARA Nobutad
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable curry-howard-linebot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matsubara0507/curry-howard-linebot
